# liqmon

./: .gitignore  CHANGELOG.md  README.md
collector/: README.md  hello.py  liqmon.example.toml  liqmon.toml  monitor.example.toml  monitor.py  pyproject.toml
collector/liqmon/: __init__.py  alerts.py  cli.py  config.py  poller.py  storage.py  transports.py
collector/liqmon/devices/: __init__.py  base.py  cpa1114.py  helium_level.py  hrc110.py  scm10.py
dashboard/: README.md  app.py  pyproject.toml
data/: readings.csv  readings2.sqlite
